# llm-mmo

./: .dockerignore  .gitignore  README.md  SETUP.md  fly.toml
.agents/skills/creating-workflows/: SKILL.md
.claude/skills/: README.md  creating-workflows
.github/workflows/: agent-action.yml  review.yml
bot/: .env.example  Dockerfile  README.md  __init__.py  __main__.py  agent.py  chat.py  config.py  config.toml  cron.py  cron_smoke.py  discordutil.py  dispatch.py  docker-entrypoint.sh  gitsync.py  knowledge.py  memory.py  nudge.py  personas.py  pyproject.toml  review.py  skills.py  smoke.py  store.py  tools.py  usage.py  web.py  web_smoke.py
bot/tests/: test_agent.py  test_config.py  test_cron.py  test_discordutil.py  test_gitsync.py  test_knowledge.py  test_memory.py  test_nudge.py  test_persist.py  test_review.py  test_skill_manage.py  test_skills.py  test_store.py  test_tools.py  test_usage.py  test_web.py
docs/: hermes-port-plan.md  phase1-spec.md  phase2-spec.md  phase3-spec.md  phase4-spec.md  phase5-spec.md
knowledge/: README.md
knowledge/thumbnail-ideas/: EXAMPLE-cooking-pov-hook.md
memory/: MEMORY.md  USER.md
personas/: README.md  default.md  ops.md  thumbnail-scout.md
scripts/: README.md  check-deps.sh  deploy-bot-fly.sh  make-bot-env.sh  set-github-secrets.sh
specs/: ambient-assistant.md
workflows/: AUTHORING.md  README.md  actions.toml  opencode.json  review-routing.toml
workflows/agents/: SHARED.md
workflows/scripts/: extract-output.py  lib.sh  notify-discord.py  post-comment.py  run-action.sh  run-review.sh
(+7 files in other folders)
